# rust-jsonrpc2

./: Cargo.toml  README.rst
src/: client.rs  error.rs  lib.rs  request.rs  response.rs
